this commit includes the changes done for the ui
