# user-management/internal/server/http.go
@@ -7,30 +7,46 @@ import (
 
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
-	"github.com/go-kratos/kratos/v2/transport/http"
+	kratoshttp "github.com/go-kratos/kratos/v2/transport/http"
 )
 
 // NewHTTPServer new HTTP server.
 // Notice we REMOVED GreeterService and ADDED TenantsService
-func NewHTTPServer(c *conf.Server, tenants *service.TenantsService, logger log.Logger) *http.Server {
-	var opts = []http.ServerOption{
-		http.Middleware(
+func NewHTTPServer(c *conf.Server, tenants *service.TenantsService, logger log.Logger) *kratoshttp.Server {
+	var opts = []kratoshttp.ServerOption{
+		kratoshttp.Middleware(
 			recovery.Recovery(),
 		),
+		// kratoshttp.Filter(corsMiddleware), // Add the custom CORS middleware here
 	}
 	if c.Http.Network != "" {
-		opts = append(opts, http.Network(c.Http.Network))
+		opts = append(opts, kratoshttp.Network(c.Http.Network))
 	}
 	if c.Http.Addr != "" {
-		opts = append(opts, http.Address(c.Http.Addr))
+		opts = append(opts, kratoshttp.Address(c.Http.Addr))
 	}
 	if c.Http.Timeout != nil {
-		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
+		opts = append(opts, kratoshttp.Timeout(c.Http.Timeout.AsDuration()))
 	}
-	srv := http.NewServer(opts...)
+	srv := kratoshttp.NewServer(opts...)
 
 	// Register the Tenants Service
 	tenantsv1.RegisterTenantsServiceHTTPServer(srv, tenants)
 
 	return srv
 }
+
+// func corsMiddleware(handler http.Handler) http.Handler {
+// 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+// 		w.Header().Set("Access-Control-Allow-Origin", "*")
+// 		w.Header().Set("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS, PATCH")
+// 		w.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization, X-Requested-With")
+
+// 		if r.Method == "OPTIONS" {
+// 			w.WriteHeader(http.StatusNoContent)
+// 			return
+// 		}
+
+// 		handler.ServeHTTP(w, r)
+// 	})
+// }
